Fixed overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@
   gap: 10px;
   max-height: 85vh;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 .sidebar {
   width: 200px;
@@ -89,11 +90,16 @@ form {
   text-transform: capitalize;
   margin-bottom: 5px;
   color: rgb(18, 23, 18);
+  word-wrap: break-word;
+}
+.note-description {
+  word-wrap: break-word;
 }
 
 .description {
   max-width: 60ch;
   margin: 0 auto;
+
 }
 .description-title {
   text-decoration: underline;
